testing/tests/melt/negative/expr_type_index_2.c

int f[1];

int g() {

  1[2]; // `indexable`

}
